tests/tooling/fixtures/native/recovery/negative/negative_hex_literal_parser_invalid_literal.objc3
// Expected diagnostic code(s): O3P103.
module NegativeHexLiteralParserInvalidLiteral;

let value = 0x;

fn main() -> i32 {
  return 0;
}
